#  Licensed to the Apache Software Foundation (ASF) under one
#  or more contributor license agreements.  See the NOTICE file
#  distributed with this work for additional information
#  regarding copyright ownership.  The ASF licenses this file
#  to you under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance
#  with the License.  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[project]
name = "ats-docs"
version = "0.1.0"
description = "Documentation dependencies for Apache Traffic Server"
requires-python = ">=3.11"

dependencies = [
    # We pin Sphinx because the sphinx-rtd-theme suggests this as a best practice.
    # If not, we will often face issues when Sphinx updates their version before
    # sphinx-rtd-theme has had time to update their component for the new sphinx
    # version.
    "sphinx==8.2.3",

    "sphinx-rtd-theme>=3.0.0,<4.0.0",
    "sphinxcontrib-jquery",
    "sphinxcontrib-plantuml",
    # i18n
    "sphinx-intl",

    "pyyaml",

    # For parsing Doxygen XML output, to add links from an API description
    # to the source code for that object.
    "lxml",

    "polib>=1.0.3",
]



